<resources>
    <string name="app_name">AppPatitasKEA3</string>
    <string name="valtitulologin">AUTENTICACIÓN</string>
    <string name="valetusuario">Ingrese su usuario</string>
    <string name="valetpassword">Ingrese su password</string>
    <string name="valchkrecordar">Guardar Información</string>
    <string name="valbtnlogin">INGRESAR</string>
    <string name="valbtnregistrar">REGISTRAR USUARIO</string>
    <string name="valtituloregistro">REGISTRAR USUARIO</string>
    <string name="valetnombre">Ingrese su nombre</string>
    <string name="valetapellido">Ingrese su apellido</string>
    <string name="valetemail">Ingrese su email</string>
    <string name="valetcelular">Ingrese su número de celular</string>
    <string name="valetusuarioreg">Ingrese su usuario</string>
    <string name="valetpasswordreg">Ingrese su password</string>
    <string name="valetpasswordreg2">Repita su password</string>
    <string name="valbtnregistrarusuario">REGISTRAR</string>
    <string name="valbtnirlogin">IR A LOGIN</string>
    <string name="title_activity_inicio">InicioActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="msgerrorlogin">Ingrese su usuario y password.</string>
    <string name="msgerrorregnombre">Su nombre es obligatorio</string>
    <string name="msgerrorregape">Su apellido es obligatorio</string>
    <string name="msgerrorregcel">Su número de celular es obligatorio</string>
    <string name="msgerrorregemail">Su email es obligatorio</string>
    <string name="msgerrorregusu">Su usuario es obligatorio</string>
    <string name="msgerrorregpass">Su password es obligatorio</string>
    <string name="msgerrorregpass2">Su password no coincide.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="valnavlistamascota">Mascotas Perdidas</string>
    <string name="valnavvoluntario">Unete a nosotros</string>
    <string name="valtitulovoluntario">UNETE A NUESTRO EQUIPO</string>
    <string name="valterminosvoluntario">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="valchkaceptocondiciones">¿Acepta las condiciones de ser voluntarios?</string>
    <string name="valbtnregvoluntario">REGISTRAR VOLUNTARIO</string>
    <string name="msgerrorcheckcvol">Acepte los términos y condiciones para ser voluntario</string>
    <string name="valtituloesvoluntario">GRACIAS POR SER PARTE DE NUESTRO EQUIPO</string>
    <string name="msgcambiarusuario">Quitar el check para ingresar con otro usuario.</string>
    <string name="valaction_cerrar">Cerrar Aplicación</string>
</resources>